cmake_minimum_required(VERSION 2.8.3)
project(fkie_realsense_description)

## Find catkin macros and libraries

find_package(catkin REQUIRED COMPONENTS
)

### Message Generation ###
catkin_package(
  CATKIN_DEPENDS
)


#~~~~~~~~~~~~~~~~~~~~~~~~ ########### ~~~~~~~~~~~~~~~~~~~~~~~~~#
############################ Build #############################
#~~~~~~~~~~~~~~~~~~~~~~~~ ########### ~~~~~~~~~~~~~~~~~~~~~~~~~#

