<?xml version="1.0"?>
<package>
  <name>fkie_realsense_description</name>
  <version>0.1.0</version>
  <description>Realsense description</description>

  <maintainer email="matthias.nieuwenhuisen@fkie.fraunhofer.de">Matthias Nieuwenhuisen</maintainer>

  <license>Apache 2.0</license>

  <author email="matthias.nieuwenhuisen@fkie.fraunhofer.de">Matthias Nieuwenhuisen</author>
  <author email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</author>
  <author email="doron.hirshberg@intel.com">Doron Hirshberg</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>

</package>
